# obsidian-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/obsidian_agent/: __init__.py  agent.py  cli.py  config.py  tools.py  vault.py
tests/: test_agent.py  test_chat.py  test_tools.py
tests/fixtures/vault/: Compliance Checklist.md
tests/fixtures/vault/.obsidian/: app.json
tests/fixtures/vault/Finance/: Budget-Policy.md
tests/fixtures/vault/Operations/: Vendor-Onboarding.md
