[project]
name = "obsidian-agent"
version = "0.1.0"
description = "LangGraph agent that answers queries from an Obsidian vault with citations."
readme = "README.md"
authors = [
    { name = "javier monasterio", email = "javiermonasterio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
obsidian-agent = "obsidian_agent.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
obsidian_agent = ["py.typed"]
